[project]
name = "GFlowMeter"
version = "0.0.1"
description = "A Tool for Generating Datasets from PCAP Files"
requires-python = ">=3.12"


dependencies = [
    "hexdump>=3.3",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scapy>=2.7.0",
    "tqdm>=4.67.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/GFlowMeter"]


[project.scripts]
gflow = "GFlowMeter.main:main"
